# dobot-rust-fx24

./: Cargo.toml  README.md
examples/: get_started.rs  move_square.rs
src/: base.rs  error.rs  lib.rs  message.rs
tests/: control_dobots.rs  test_config.toml
