[package]
name = "dobot"
description = "High-level API to control Dobot robot arms"
version = "0.1.1"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/dobot"
repository = "https://github.com/jerry73204/dobot-rust.git"
readme = "README.md"

[dependencies]
tokio-serial = "^4.3.3"
tokio = { version = "^0.2.10", features = ["io-util"] }
failure = "^0.1.6"
getset = "^0.0.9"
num-derive = "^0.3.0"
num-traits = "^0.2.11"

[dev-dependencies]
toml = "^0.5.6"
serde = { version = "^1.0.104", features = ["derive"] }


[features]
dobot-test = []
