[package]
name = "dobot-fx24"
description = "fork of dobot-rust! | High-level API to control Dobot robot arms"
version = "0.0.1"
authors = ["jerry73204 <jerry73204@gmail.com>", "marischou"]
edition = "2018"
license = "MIT"
documentation = "https://github.com/marischou/dobot-rust-fx24/tree/master"
repository = "https://github.com/marischou/dobot-rust-fx24.git"
readme = "README.md"

[dependencies]
tokio-serial = "^5.4.4"
tokio = { version = "^1.40.0", features = ["io-util"] }
failure = "^0.1.8"
getset = "^0.1.2"
num-derive = "^0.4.2"
num-traits = "^0.2.19"

[dev-dependencies]
toml = "^0.5.6"
serde = { version = "^1.0.210", features = ["derive"] }
tokio = { version = "^1.40.0", features = ["full"] }
